<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">i智驾</string>
 	<string name="WELCOME_TO_USE_IZHIJIA">欢迎使用i智驾</string>
 	<string name="PHONE_NUMBER">手机号</string>
 	<string name="PLEASE_INPUT_PHONE_NUM">请输入11位手机号码</string>
 	<string name="VERIFY_NUMBER">验证码</string>
 	<string name="RETRIEVE_VERIFY_NUMBER">获取验证码</string>
 	<string name="LOGIN">登录</string>
 	<string name="LOGINOUT">注销</string>
 	<string name="CONFIRM_LOGOUT">请确认是否注销用户</string>
 	<string name="AGREEMENT">阅读并同意智驾服务条款</string>
 	<string name="INTER_CONNECT_APP_MANAGEMENT">互联APP管理</string>
 	<string name="ADD_INSTALLED_APP_TO_YCARPLUS">添加已安装应用到Y-CarPlus</string>
 	<string name="MY_CAR">我的爱车</string>
 	<string name="SHARE">分享</string>
 	<string name="SINA_BLOG">新浪微博</string>
 	<string name="TENCENT_BLOG">腾讯微博</string>
 	<string name="WECHAT_FRIEND">微信好友</string>
 	<string name="WECHAT_MOMENTS">微信朋友圈</string>
 	<string name="DOWNLOAD">下载</string>
 	<string name="DOWNLOADING">正在下载</string>
 	<string name="UPDATE">更新</string>
 	<string name="DELETE">删除</string>
 	<string name="LOCK_CAR">车门上锁</string>
 	<string name="CLOSE_WINDOW">关闭车窗</string>
 	<string name="MY_4S">我的4s店</string>
 	<string name="SERVICE_CONTRACT">服务合约</string>
 	<string name="USAGE_HELP">使用帮助</string>
 	<string name="SOFTWARE_UGRADE">软件更新</string>
 	<string name="MEMEBER_CENTER">会员中心</string>
 	<string name="USER_NAME">用户名</string>
 	<string name="CAR_INFORMATION">车辆信息</string>
 	<string name="CITY">所在城市</string>
 	<string name="CAR_NUMBER">车牌号:</string>
 	<string name="CAR_ENGINE_NUMBER">发送机号:</string>
 	<string name="CAR_VIN">VIN:</string>
 	<string name="DONE">完成</string>
 	<string name="AD_1">适用于车载导航的手机APP</string>
 	<string name="AD_2">懂车，更懂与车配合</string>
 	<string name="AD_3">快速添加应用到导航仪</string>
 	<string name="USE_IT_NOW">立刻体验</string>
 	<string name="app_version">i智驾 1.0.0</string>
 	<string name="check_update">检测更新</string>
 	<string name="contract_title">I智驾会员服务协议</string>
 	<string name="contract_content">“智驾行”APP是配合智驾盒子使用的专属APP，秉承“智行天下、驾享服务”的理念，依托智驾车联网运营平台，为用户提供一键导航、紧急救援、远程车辆诊断和礼宾尊享服务。</string>
	<string name="help_title">I智驾使用帮助</string>
	<string name="help_content">“智驾行”APP是配合智驾盒子使用的专属APP，秉承“智行天下、驾享服务”的理念，依托智驾车联网运营平台，为用户提供一键导航、紧急救援、远程车辆诊断和礼宾尊享服务。</string>
	<string name="ycarlink_connecting">Y-CARLINK正在连接中</string>
	<string name="ycarlink_connected">Y-CARLINK连接成功</string>
	<string name="input_car_code">输入车机验证码</string>
	<string name="re_input_car_code">车机验证码不正确，请重新输入8位PIN码</string>
	<string name="please_open_network">请打开网络连接</string>
	<string name="confirm">确定</string>
	<string name="cancel">取消</string>
	<string name="please_wait">请稍候</string>
	<string name="confirm_exit">请确认是否退出应用程序</string>
	<string name="getting_code">正在获取验证码</string>
	<string name="user_logining">用户登录，请稍等</string>
	<string name="user_logouting">正在注销用户</string>
	<string name="fail_to_login">登录失败,请重试</string>
	<string name="fail_to_logout">登出失败</string>
	<string name="please_input_code">请输入8位PIN码</string>
	<string name="pin_code_length_not_correct">PIN码长度不足8位</string>
	<string name="request_failed">请求失败</string>
	<string name="connect_car">连接</string>
	<string name="CDM_KEY_PERFIX_FOR_CAR">car.app</string>
	<string name="CDM_KEY_PERFIX_FOR_HANDSET">hs.app</string>
	<string name="CDM_MSG_KEY_STARTAPP">startapp</string>
	<string name="CDM_MSG_KEY_STOPAPP">stopapp</string>
	<string name="KAOLAFM_MSG_KEY_PLAYSTART">playstart</string>
	<string name="KAOLAFM_MSG_KEY_PLAYSTOP">playstop</string>
	<string name="KAOLAFM_MSG_KEY_PLAYPAUSE">playpause</string>
	<string name="KAOLAFM_MSG_KEY_PLAYRESUME">playresume</string>
	<string name="KAOLAFM_MSG_KEY_REQUESTCATEGORY">requestcategory</string>
	<string name="KAOLAFM_MSG_KEY_REQUESTCONTENT">requestcontent</string>
	<string name="KAOLAFM_MSG_KEY_REQUESTPLAYLIST">requestplaylist</string>
</resources>
