<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wtext"

    tools:context="${relativePackage}.${activityClass}" >

     <RelativeLayout
        android:id="@+id/title_bar"
		style="@style/title_bar"
		android:paddingLeft="10dip"
        android:layout_alignParentTop="true" >
        <ImageButton 
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@color/nobg"
            android:src="@drawable/ic_back"
            />
        <TextView
            android:id="@+id/top_str"
            style="@style/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/USAGE_HELP" />
    </RelativeLayout>
    
    <TextView 
        android:id="@+id/title"
        android:layout_below="@id/title_bar"
        android:layout_marginTop="20dip"
        android:layout_marginBottom="20dip"
        android:layout_marginLeft="10dip"
        android:textSize="18sp"
        android:text="@string/help_title"
        android:textColor="@color/text_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <TextView 
        android:id="@+id/content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_below="@id/title"
       	android:text="@string/help_content"
       	android:textColor="@color/btext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />          
</RelativeLayout>


