<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:id="@+id/title_bar"
		style="@style/title_bar"
        android:layout_alignParentTop="true"
        android:paddingLeft="10dip" >
        <ImageButton 
            android:id="@+id/slide_menu_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@color/nobg"
            android:src="@drawable/list"
            />
        <TextView
            android:id="@+id/top_str"
            style="@style/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/INTER_CONNECT_APP_MANAGEMENT" />
    </RelativeLayout>
    
    <LinearLayout
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar"
        android:background="@color/banner_black"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="10dip" >

        <ImageView
            android:layout_width="40dip"
            android:layout_height="40dip"
            android:src="@drawable/ic_launcher" />

        <TextView  
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:layout_marginLeft="5dip"
            android:textColor="@color/wtext"
            android:text="@string/ADD_INSTALLED_APP_TO_YCARPLUS"
            />

        <ImageButton
            android:id="@+id/carplus_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/nobg" />
        
        <Button
            android:id="@+id/btn_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_car" />

    </LinearLayout>
    <ListView 
        android:id="@+id/app_list"
        android:layout_below="@id/banner"
        android:background="@color/dark_gray"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />        
    </RelativeLayout>
