<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <com.yesway.izhijia.view.GifView
        android:id="@+id/connect_icon"
        android:layout_width="200dip"
        android:layout_height="200dip"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dip"
        android:layout_marginBottom="40dip" />

    <TextView
        android:id="@+id/input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/connect_icon"
        android:layout_marginLeft="40dip"
        android:text="@string/input_car_code"
        android:textColor="@color/btext"
        android:textSize="16sp" />

    <com.yesway.izhijia.view.EditTextWithDelete
        android:id="@+id/car_code"
        android:layout_width="match_parent"
        android:layout_height="30dip"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="40dip"
        android:layout_below="@id/connect_icon"
        android:layout_alignBaseline="@id/input_label"
        android:layout_toEndOf="@id/input_label"
        android:layout_toRightOf="@id/input_label"
        android:background="@color/wtext"
        android:singleLine="true"
        android:maxLength="8"
        android:textSize="16sp" />

      <Button
        android:id="@+id/cancel_btn"
        android:layout_marginTop="20dip"
        android:layout_marginBottom="40dip"
        android:layout_marginLeft="40dip"
        android:layout_marginRight="40dip"
		android:layout_centerHorizontal="true"
		android:layout_alignParentBottom="true"
		android:text="@string/cancel"
		android:textColor="@color/wtext"
		android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/file_red_btn_bg" />    
              
    <Button
        android:id="@+id/done_btn"
        android:layout_above="@id/cancel_btn"
        android:layout_marginTop="80dip"
        android:layout_marginLeft="40dip"
        android:layout_marginRight="40dip"
		android:layout_centerHorizontal="true"
		android:text="@string/confirm"
		android:textColor="@color/wtext"
		android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/file_green_btn_bg" />
    

</RelativeLayout>