<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:id="@+id/title_bar"
        style="@style/title_bar"
        android:layout_alignParentTop="true"
        android:paddingLeft="10dip"
        android:paddingRight="10dip" >

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@color/nobg"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/top_str"
            style="@style/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/CAR_INFORMATION" />

        <ImageButton
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/nobg"
            android:src="@drawable/ic_home" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/car_info_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_bar"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="40dip"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/wtext"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dip" >

            <TextView
                android:id="@+id/pin_label"
                style="@style/content_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="20dip"
                android:text="@string/CAR_VIN" />

            <com.yesway.izhijia.view.EditTextWithDelete
                android:id="@+id/pin_value"
                style="@style/content_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/wtext"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dip" >

            <TextView
                android:id="@+id/car_number_label"
                style="@style/content_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="20dip"
                android:text="@string/CAR_NUMBER" />

            <com.yesway.izhijia.view.EditTextWithDelete
                android:id="@+id/car_number_value"
                style="@style/content_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/wtext"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dip" >

            <TextView
                android:id="@+id/engine_label"
                style="@style/content_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="20dip"
                android:text="@string/CAR_ENGINE_NUMBER" />

            <com.yesway.izhijia.view.EditTextWithDelete
                android:id="@+id/engine_value"
                style="@style/content_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/car_info_list"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="60dip"
        android:layout_marginRight="60dip"
        android:background="@color/btn_green"
        android:text="@string/DONE"
        android:textColor="@color/wtext" />

</RelativeLayout>